--- a/package.json
+++ b/package.json
@@ -11,11 +11,13 @@
   "dependencies": {
     "axios": "^0.15.3",
     "color": "^0.11.3",
+    "leancloud-storage": "^2.1.4",
     "lodash": "^4.13.1",
     "moment": "^2.13.0",
     "native-base": "2.0.0",
     "react": "15.4.2",
     "react-native": "0.41.2",
+    "react-native-animatable": "^1.1.1",
     "react-native-code-push": "1.17.0-beta",
     "react-native-easy-grid": "0.1.8",
     "react-native-modalbox": "^1.3.4",
